@@ -13,6 +13,7 @@
       and 'autocomplete' is the new option for the removed 'wildoptions=auto'
     * IMPORTANT: We automatically list completions as you type now. If you have a slow computer,
       you might want to :set noautocomplete
+    * Many small fixes for Firefox4 changes
     * Lots of restyled content and changed colors
     * gu works now better for urls with anchors and GET arguments (like url.com/file?query=foo#anchor)
     * :bmarks and :history commands support multiple space separated filter entries and
@@ -39,7 +40,8 @@
     * Add image-related hint modes: [m];x[m] for title/alt text, and [m];S[m] and [m];A[m]
       for saving.
     * Image hints now work on anything with a *src* tag.
-    * enable 'hinttags' and 'extenedhinttags' to setlocal
+    * Enable 'hinttags' and 'extendedhinttags' to setlocal
+    * Various other bug fixing and refinement
 
 2010-04-07:
     * version 2.3.1
